alignment of countdown corrected

--- a/style.css
+++ b/style.css
@@ -270,11 +270,13 @@ h1 {
 }
 
 .countdown {
-    position: absolute;
+    position: fixed;
     top: 0px;
     right: 0px;
     bottom: 0px;
     left: 0px;
+    text-align: center;
+    line-height: 50vh;
     margin: auto;
     font-size: 130px;
     user-select: none;
@@ -442,23 +444,8 @@ h1 {
 
 @media only screen and (max-width: 600px) {
 
-    .fullscreen {
-        display: none;
-    }
-
-    .logo {
-        height: 4rem;
-        width: 4rem;
-        display: block;
-        user-select: none;
-        margin-top: 20px;
-        margin-inline: auto;
-        position: static;
-        margin-inline: auto;
-    }
 
     .countdown {
-        position: absolute;
         top: 0px;
         right: 0px;
         bottom: 0px;
@@ -479,7 +466,7 @@ h1 {
     }
 
     .Results {
-        margin-top: 0px;
+        margin-top: 100px;
     }
 
     .gameArea {
